--- a/src/style.scss
+++ b/src/style.scss
@@ -270,17 +270,26 @@ $yellow:#f5bc04;
 }
 
 // Detail
+.dImg{
+	// height: 100%;
+	height: 100%;
+	aspect-ratio: 3/2;
+	object-fit: contain;
+	mix-blend-mode: color-burn;
+}
 
 .blog-title-box {
-    width: 38.2%;
+    // width: 38.2%;
 	z-index: 555;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
+	// background-size: cover;
+	// background-size: 80% 100%;
+	// background-repeat: no-repeat;
+	// background-position: center center;
 
     .single & {
 		position: relative;
-		height: 700px;
+		height: 90vh;
+		// height: 700px;
 		width: 100%;
 	}
 
@@ -311,12 +320,14 @@ $yellow:#f5bc04;
 			font-weight: 300;
             .single & {
 				font-size: 72px;
+				font-size: 56px;
 			}
         }
 
         > span {
             display: block;
-			color: rgba(255,255,255,.5);
+			color: rgb(255, 255, 255);
+			text-shadow: 1.5px 1.5px 1px black;
 			text-transform: uppercase;
 			font-size: 15px;
 			letter-spacing: .05em;
@@ -387,11 +398,15 @@ $yellow:#f5bc04;
 }
 
 .trending-img-size {
-	height: 326px;
+	// height: 326px;
+	// height: 200px;
 	overflow: hidden;
 }
 .trending-img-size > img {
-	height: 340px;
+	// height: 340px;
+	object-fit: scale-down;
+	width: 200px;
+	aspect-ratio: 1/1;
 	min-width: 100%;
 }
 
