--- a/src/style.scss
+++ b/src/style.scss
@@ -331,9 +331,8 @@ $yellow: #f5bc04;
       .single & {
         font-size: 72px;
         font-size: 56px;
-	}
-}
-
+      }
+    }
 
     > span {
       display: block;
@@ -387,7 +386,7 @@ $yellow: #f5bc04;
 
 // Most popular
 .most-popular-img {
-//   height: 80px;
+  //   height: 80px;
   width: 100%;
   aspect-ratio: 1/1;
 }
@@ -712,17 +711,40 @@ $yellow: #f5bc04;
   text-align: justify;
 }
 
-
 //general fix classes
-.divide-holder{
-	display: flex;
-	margin-block: 10px;
-	justify-content: center;
-	align-items: center;
-	height: fit-content;
+.divide-holder {
+  display: flex;
+  margin-block: 10px;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
 }
-.divide{
-	background-color: rgba(99, 99, 99, 0.322);
-	height: .2px;
-	width: 80%;
+.divide {
+  background-color: rgba(99, 99, 99, 0.322);
+  height: 0.2px;
+  width: 80%;
+}
+
+// ---------------    scroll indicator styles ----------------------//
+/* Style the header: fixed position (always stay at the top) */
+.scroll-header {
+  position: fixed;
+  top: 0;
+  z-index: 9999;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: #04aa6d;
+  width: 0%;
 }
