--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -26,6 +25,17 @@
 
 .App-link {
   color: #61dafb;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.hvr {
+  transition: 0.35s;
+}
+.hvr:hover {
+  background-color: #eee;
 }
 
 @keyframes App-logo-spin {
